--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   background-color: #2d2d2d;
 }
 
-h1, h2, h3, h4, h5, h6, code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+h1, h2, h3, h4, h5, h6, code, button {
+  font-family: "Share Tech Mono", source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
