--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,17 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Share Tech Mono", source-code-pro, Menlo, Monaco, Consolas,
+    "Courier New", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  color: #fff;
+  color: white;
   background-color: #2d2d2d;
 }
 
-h1, h2, h3, h4, h5, h6, code, button {
-  font-family: "Share Tech Mono", source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+div,
+p {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
