--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,7 @@ button {
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
 }
+
+button:focus {
+  outline: none;
+}
